--- a/pom.xml
+++ b/pom.xml
@@ -42,9 +42,10 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
+				
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>3.0.0-M3</version>
+					<version>3.1.0</version>
 					<configuration>
 						<suiteXmlFiles>
 							<suiteXmlFile>
